--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </header>
 
   <main>
-    <div class="masonry">
+    <div class="grid">
 
       <img src="/img/img(1).jpg" alt="">
       <img src="/img/img(2).jpg" alt="">
