--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
       <img src="/img/img(1).jpg" alt="">
       <img src="/img/img(2).jpg" alt="">
       <img src="/img/img(3).jpg" alt="">
-      <img src="/img/img(4).jpg" alt="">
+      <img class="imgfour" src="/img/img(4).jpg" alt="">
       <img src="/img/img(5).jpg" alt="">
       <img src="/img/img(6).jpg" alt="">
-      <img src="/img/img(7).jpg" alt="">
+      <img class="imgseven" src="/img/img(7).jpg" alt="">
       <img src="/img/img(8).jpg" alt="">
       <img src="/img/img(9).jpg" alt="">
       <img src="/img/img(10).jpg" alt="">
@@ -37,7 +37,7 @@
       <img src="/img/img(12).jpg" alt="">
       <img src="/img/img(13).jpg" alt="">
       <img src="/img/img(14).jpg" alt="">
-      <img src="/img/img(15).jpg" alt="">
+      <img class="imgfifteen" src="/img/img(15).jpg" alt="">
 
     </div>
   </main>
